@@ -1,8 +1,9 @@
 kadu (0.9.2-1) unstable; urgency=low
 
   * New upstream release
+  * Updated debian/patches/02-.config.patch to make it fit 0.9.2
 
- -- Patryk Cisek <patryk@debian.org>  Wed, 11 May 2011 13:34:08 +0200
+ -- Patryk Cisek <patryk@debian.org>  Wed, 11 May 2011 13:42:29 +0200
 
 kadu (0.9.1-1) unstable; urgency=low
 
